# essence

./: README.md  essence.json  pyproject.toml
src/: analyse_reqs.py  essence.py  ignores.py
